--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "A TypeScript Markdown file previewer with live rendering and diagram support",
   "main": "dist/server.js",
+  "bin": {
+    "mdviewer": "dist/server.bundle.js"
+  },
   "scripts": {
     "embed": "node scripts/embed-assets.js",
     "build": "npm run embed && tsc",
-    "build:bundle": "esbuild dist/server.js --bundle --platform=node --target=node18 --outfile=dist/server.bundle.js",
+    "build:bundle": "esbuild dist/server.js --bundle --platform=node --target=node18 --banner:js=\"#!/usr/bin/env node\" --outfile=dist/server.bundle.js",
     "start": "node dist/server.js",
     "start:bundle": "node dist/server.bundle.js",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/server.js\"",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "release:local": "npm run build && npm run build:bundle && mkdir -p ~/.local/bin && cp dist/server.bundle.js ~/.local/bin/mdviewer && chmod +x ~/.local/bin/mdviewer",
+    "install:local": "mkdir -p ~/.local/bin && cp dist/server.bundle.js ~/.local/bin/mdviewer && chmod +x ~/.local/bin/mdviewer"
   },
   "keywords": [
     "markdown",
@@ -39,5 +44,10 @@
     "esbuild": "^0.27.0",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "files": [
+    "dist/server.bundle.js",
+    "README.md",
+    "LICENSE"
+  ]
 }
